--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,18 @@
 </head>
 <body>
     <h1>Market Making Game</h1>
+    <div id="player-position">Player Position: <span>0</span></div>
+    <table id="trades-table">
+        <thead>
+            <tr>
+                <th>Action</th>
+                <th>Size</th>
+                <th>Price</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
     <div class="container">
         <div class="bid">
             <h2>Bid</h2>
