--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,33 @@
 </head>
 <body>
     <h1>Market Making Game</h1>
+    <div id="round-counter">Round: <span>1</span></div>
     <div id="player-position">Player Position: <span>0</span></div>
+    <div class="container">
+        <div class="bid">
+            <h2>Bid</h2>
+            <label for="bid-price">Price: </label>
+            <input type="range" id="bid-price" min="0" max="100" step="1">
+            <span id="bid-price-display">0</span>
+            <br>
+            <label for="bid-size">Bid Size:</label>
+            <select id="bid-size" name="bid-size"></select>
+            <div class="display-bid-size"></div>
+        </div>
+
+
+        <div class="ask">
+            <h2>Ask</h2>
+            <label for="ask-price">Price: </label>
+            <input type="range" id="ask-price" min="0" max="100" step="1">
+            <span id="ask-price-display">0</span>
+            <br>
+            <label for="ask-size">Ask Size:</label>
+            <select id="ask-size" name="ask-size"></select>
+            <div class="display-ask-size"></div>
+        </div>
+        <button id="submit">Submit</button>
+    </div>
     <table id="trades-table">
         <thead>
             <tr>
@@ -24,28 +50,5 @@
         <tbody>
         </tbody>
     </table>
-    <div class="container">
-        <div class="bid">
-            <h2>Bid</h2>
-            <label for="bid-price">Price: </label>
-            <input type="range" id="bid-price" min="0" max="100" step="1">
-            <span id="bid-price-display">0</span>
-            <br>
-            <label for="bid-size">Size: </label>
-            <input type="number" id="bid-size" min="0" step="1">
-            <div class="display-bid-size"></div>
-        </div>
-        <div class="ask">
-            <h2>Ask</h2>
-            <label for="ask-price">Price: </label>
-            <input type="range" id="ask-price" min="0" max="100" step="1">
-            <span id="ask-price-display">0</span>
-            <br>
-            <label for="ask-size">Size: </label>
-            <input type="number" id="ask-size" min="0" step="1">
-            <div class="display-ask-size"></div>
-        </div>
-        <button id="submit">Submit</button>
-    </div>
 </body>
 </html>
