--- a/static/style.css
+++ b/static/style.css
@@ -94,3 +94,75 @@ tbody tr:nth-child(odd) {
 tbody tr:nth-child(even) {
     background-color: #333;
 }
+
+.results-table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 1em;
+}
+
+.results-table thead {
+    background-color: #f2f2f2;
+    color: #333;
+}
+
+.results-table tbody {
+    background-color: #fff;
+}
+
+.results-table th,
+.results-table td {
+    padding: 12px;
+    border: 1px solid #ccc;
+}
+
+.container-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 80%;
+    margin: 20px auto;
+}
+
+.question-box {
+    background-color: rgba(50, 50, 50, 0.8);
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.position-round-wrapper {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+    color: white;
+    align-items: center;
+}
+
+.player-info {
+    display: flex;
+    align-items: center;
+}
+
+
+.results-table-cell {
+  padding: 8px;
+  text-align: center;
+  border: 1px solid #ddd;
+  white-space: nowrap;
+  max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.rules-content {
+  max-height: 300px;
+  overflow-y: auto;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 8px;
+}
+
+
